# whatIlearn

./: .gitignore  .null-ls_660031_stop-container.sh  Dockerfile  README.md  SCHEDULE.md  cspell.json  k3d-default.yaml  nodejs-interview-questions.md  pyproject.toml  requirements.txt  stop-container.sh
.github/workflows/: main.yaml
backend/docker-compose-files/: docker-compose-db.yaml
backend/dockerfiles/: Dockerfile
certifications/ckad/: README.md  prepare.md  useful-commands.md
certifications/cloud-practitioner/: README.md
container-orchestration/: oci-image.md
databases/: indexing.md
databases/complicated-queries/: union_all.md
databases/migrations/: migrate_keycloak_database.md
databases/mongodb/: mongorestore-mongodump.md
databases/postgres/: psql.md
databases/query-plans/: sargable-queries.md
devops/aws/: s3-bucket-permission.json
devops/docker/: bookmark-volume.md
devops/helm/: README.md  command.sh
devops/k8s/: backend.yaml  web-app.yaml
devops/server/: ssh_command.sh
frontend/: Dockerfile  nginx.conf
k8s/: web-app.yaml
notes/: README.md
notes/architectures/: microservice.md
notes/container-orchestration/: db-docker.md
portfolio/: .env.example  README.md  SCHEDULE.md  nginx.conf  startup.sh
projects/: climate.md  coders-tokyo-forum-backend.md  coders-tokyo-forum-frontend.md  dotfiles.md  materiality.md  mcashpay.md  portfolio.md  renyoo.md  tornomy.md  usdol.md
schedule_tasks/: requirements.txt  startup.sh
schedule_tasks_bot/: .null-ls_907131_.env  Dockerfile  README.md  SCHEDULE.md  startup.sh
(+166 files in other folders)
